# spatialjustice_accessibility

./: .gitignore  pyproject.toml
notebooks/: SocialAccessbility.ipynb
src/access/: io.py  main.py  network.py
