[project]
name = "socialaccess"
version = "0.1.0"
description = "Who Can Reach What — Urban accessibility analysis for spatial justice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "typer>=0.12.0",
]

[project.scripts]
access = "access.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/access"]